Awesome features added

--- a/celebrate/assets/css/header-footer.css
+++ b/celebrate/assets/css/header-footer.css
@@ -734,6 +734,11 @@ footer {
     padding-bottom: 90px;
 }
 
+footer .footer-logo {
+    height: 250px;
+    width: auto;
+}
+
 footer .lead {
     font-size: 15px;
     font-weight: 400;
