--- a/celebrate/assets/css/header-footer.css
+++ b/celebrate/assets/css/header-footer.css
@@ -582,6 +582,9 @@
 
 @media only screen and (max-width: 768px) {
     .navbar .user-account,
+    .navbar .nav-brand {
+        margin-left: 5px;
+    }
     .navbar .carts {
         width: 40%;
         margin-top: -350px;
