--- a/celebrate/assets/css/header-footer.css
+++ b/celebrate/assets/css/header-footer.css
@@ -512,7 +512,7 @@
     }
     .navbar #checkbtn {
         display: block;
-        margin-right: 15px;
+        margin-right: 10px;
         cursor: pointer;
     }
     .navbar label:hover {
@@ -584,6 +584,10 @@
     .navbar .user-account,
     .navbar .nav-brand {
         margin-left: 5px;
+    }
+    .nav-brand .brand-img img {
+        width: 130px;
+        margin-top: 15px;
     }
     .navbar .carts {
         width: 40%;
