--- a/celebrate/assets/css/header-footer.css
+++ b/celebrate/assets/css/header-footer.css
@@ -231,6 +231,16 @@
     display: none;
 }
 
+.navbar .menu .fa-th {
+    color: var(--primary-color);
+    font-size: 25px;
+}
+
+.navbar .menu .fa-th-large {
+    color: var(--primary-color);
+    font-size: 25px;
+}
+
 .navbar .menu .menu-bar {
     background: var(--primary-color);
     height: 4px;
@@ -544,7 +554,7 @@
         display: grid;
         position: absolute;
         top: 0;
-        margin-top: 320px;
+        margin-top: 380px;
         width: 100%;
         background: var(--white-color);
         padding-top: 0px;
