--- a/celebrate/assets/css/index.css
+++ b/celebrate/assets/css/index.css
@@ -80,27 +80,16 @@ section .display-4 {
     text-decoration: none;
     margin-top: 30px;
     line-height: 1.7em;
-    box-shadow: 0 3px 10px rgba(7, 103, 213, 0.7);
-    transition: all .3s ease-in;
-    animation: border-light 10s infinite forwards ease-in-out;
+    transition: all .5s;
+    background: transparent;
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
 }
 
-@keyframes border-light {
-    0% {
-        box-shadow: 0 3px 10px rgba(7, 103, 213, 0.7);
-    }
-    25% {
-        box-shadow: 0 3px 10px rgba(13, 234, 219, 0.83);
-    }
-    50% {
-        box-shadow: 0 3px 10px rgba(4, 134, 134, 0.7);
-    }
-    75% {
-        box-shadow: 0 3px 10px rgba(13, 234, 219, 0.83);
-    }
-    10% {
-        box-shadow: 0 3px 10px rgba(7, 103, 213, 0.7);
-    }
+#hero .btn:hover {
+    background: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    color: var(--white-color);
 }
 
 
