New things added

--- a/celebrate/assets/css/mc_user_view.css
+++ b/celebrate/assets/css/mc_user_view.css
@@ -86,6 +86,11 @@ section .display-4 {
     object-fit: cover;
 }
 
+#mc video {
+    margin: 5px;
+    width: 300px;
+}
+
 #mc .mc-about p {
     padding-top: 10px;
     font-size: 14px;
