--- a/celebrate/assets/css/contact.css
+++ b/celebrate/assets/css/contact.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 /* ==================================================
 # General
 ===================================================*/
@@ -42,6 +43,7 @@ section .display-4 {
     }
 }
 
+
 /* ======= Media Queries ======= */
 
 @media only screen and (max-width: 768px) {
@@ -50,7 +52,9 @@ section .display-4 {
     }
 }
 
+
 /* ==== End Query ===== */
+
 
 /* ==================================================
 # Contact
@@ -81,9 +85,9 @@ section .display-4 {
 #contact .display-4::before {
     position: absolute;
     content: '';
-    width: 100px;
+    width: 50px;
     height: 2px;
-    margin-left: -116px;
+    margin-left: -67px;
     margin-top: 20px;
     background: var(--gray-color);
 }
@@ -91,7 +95,7 @@ section .display-4 {
 #contact .display-4::after {
     position: absolute;
     content: '';
-    width: 100px;
+    width: 50px;
     height: 2px;
     margin-left: 19px;
     margin-top: 20px;
@@ -106,7 +110,8 @@ section .display-4 {
     flex-basis: 30%;
 }
 
-#contact .contact-form form input, #contact .contact-form textarea {
+#contact .contact-form form input,
+#contact .contact-form textarea {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     width: 100%;
     padding: 12px 24px;
@@ -169,6 +174,7 @@ section .display-4 {
     border: 0;
 }
 
+
 /* ======= Media Queries ======= */
 
 @media only screen and (max-width: 1060px) {
@@ -219,8 +225,8 @@ section .display-4 {
         content: '';
         width: 50px;
         height: 3px;
-        margin-left: -58px;
-        margin-top: 24px;
+        margin-left: -60px;
+        margin-top: 20px;
         background: var(--gray-color);
     }
     #contact .display-4::after {
@@ -229,7 +235,7 @@ section .display-4 {
         width: 50px;
         height: 3px;
         margin-left: 12px;
-        margin-top: 24px;
+        margin-top: 20px;
         background: var(--gray-color);
     }
     #contact .contact-form form .inputs-text-box {
@@ -267,5 +273,6 @@ section .display-4 {
         gap: 1.0em;
     }
 }
+
 
 /* ======= End Queries ======== */
