--- a/celebrate/assets/css/contact.css
+++ b/celebrate/assets/css/contact.css
@@ -162,16 +162,36 @@ section .display-4 {
     gap: 3.0em;
 }
 
-#contact .contact-address .addr-wrap .fas {
+#contact .contact-address .addr-wrap .fa-map-marker-alt {
     font-size: 25px;
     color: var(--secondary-color);
-    margin-top: -37px;
+    margin-top: -40px;
+}
+
+#contact .contact-address .addr-wrap .fa-envelope {
+    font-size: 20px;
+    color: var(--secondary-color);
+    margin-top: -45px;
+}
+
+#contact .contact-address .addr-wrap .fa-globe {
+    font-size: 20px;
+    color: var(--secondary-color);
+    margin-top: -25px;
+}
+
+#contact .contact-address .addr-wrap .fa-phone-alt {
+    font-size: 20px;
+    color: var(--secondary-color);
+    margin-top: -45px;
 }
 
 #contact iframe {
     width: 100%;
     height: 450px;
     border: 0;
+    margin-top: 30px;
+    margin-bottom: -70px;
 }
 
 
@@ -243,6 +263,9 @@ section .display-4 {
         justify-content: center;
         flex-direction: column;
         margin-bottom: 11px;
+    }
+    #contact iframe {
+        margin-top: -17px;
     }
 }
 
